--- a/config/config-debug.yaml
+++ b/config/config-debug.yaml
@@ -1,4 +1,4 @@
-version: "0.5.6"
+version: "0.5.7"
 
 # ruike 多账户配置
 discuz_ruike_domain: "https://www.ruike1.com/"
@@ -19,6 +19,15 @@ discuz_hostloc:
     password: "password2"
 
 # t00ls 多账户配置
+# 安全提问
+# 0 = 没有安全提问
+# 1 = 母亲的名字
+# 2 = 爷爷的名字
+# 3 = 父亲出生的城市
+# 4 = 您其中一位老师的名字
+# 5 = 您个人计算机的型号
+# 6 = 您最喜欢的餐馆名称
+# 7 = 驾驶执照的最后四位数字
 t00ls_domain: "https://www.t00ls.com"
 t00ls:
   - username: "t00ls_username"
